--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+REST_URL=https://api.covid19api.com/country/brazil/status/confirmed
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
